fix dark mode issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  background-color: white;
 }
 
 @layer utilities {
